# audio_lib

./: .gitignore  CMakeLists.txt  README.md  envelope_notes.txt
include/: lock_free_queue.hpp
include/stac_audio/: audio_file.hpp  audio_thread_data.hpp  biquad.hpp  dsp_declarations.hpp  dsp_utils.hpp  effect.hpp  fft_converter.hpp  filters.hpp  menu.hpp  signals.hpp
src/: CMakeLists.txt  Config.cmake.in  audio_thread_data.hpp  dsp_declarations.hpp  dsp_utils.cpp  dsp_utils.hpp  envelope.hpp  lock_free_queue.hpp  menu.cpp  menu.hpp  menu_states.hpp  message.cpp  message.hpp  my_lock_free_queue.hpp  my_lock_free_queue_impl.hpp  pocketfft_demo.cc  signals.hpp
test/: CMakeLists.txt  after_left_fft_data.sig  before_left_fft_data.complex  before_left_fft_data.sig  complex_to_real.real  original_real.real
test/src/: main.cpp  messaging_test.cpp
